# HiFiGAN_iSTFT_lightning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
hfgl/: __main__.py  cli.py  dataset.py  model.py  utils.py
hfgl/config/: __init__.py  base.yaml  lj.yaml  openslr.yaml
hfgl/config/test/: test.yaml
