[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hfgl"
dynamic = ["version"]
description = "An Unofficial Implementation of HiFiGAN and iSTFT-Net for Waveform Generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aidan Pine", email = "hello@aidanpine.ca" },
    { name = "Samuel Larkin", email = "Samuel.Larkin@nrc-cnrc.gc.ca" },
    { name = "Eric Joanis", email = "Eric.Joanis@nrc-cnrc.gc.ca" },
    { name = "Mengzhe Geng", email = "Mengzhe.Geng@nrc-cnrc.gc.ca" },
]
maintainers = [
    { name = "Aidan Pine", email = "Aidan.Pine@nrc-cnrc.gc.ca" },
    { name = "Samuel Larkin", email = "Samuel.Larkin@nrc-cnrc.gc.ca" },
    { name = "Eric Joanis", email = "Eric.Joanis@nrc-cnrc.gc.ca" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = ["everyvoice>=0.2.0a0"]

[project.scripts]
hfgl = "hfgl.cli:app"

[project.urls]
Homepage = "https://github.com/EveryVoiceTTS/HiFiGAN_iSTFT_lightning"
Repository = "https://github.com/EveryVoiceTTS/HiFiGAN_iSTFT_lightning"
Issues = "https://github.com/EveryVoiceTTS/HiFiGAN_iSTFT_lightning/issues"

[tool.hatch.version]
path = "hfgl/_version.py"

[project.optional-dependencies]
dev = ["everyvoice[dev]"]
